Margin adjustment, button style commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Pane</title>
-  <link rel="icon" href="favicon.ico"
+  <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  Dotinstall Pane
+  <header>
+    <h1>Pane</h1>
+    <p>
+      ドットインストールを見ながら<br>
+      コーディングができるAtomパッケージ
+    </p>
+    <a href="#" target="_blank" class="btn">詳細を見る</a>
+  </header>
 </body>
 </html>
