--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
   <header>
-    <h1>Pane</h1>
-    <p>
-      ドットインストールを見ながら<br>
-      コーディングができるAtomパッケージ
-    </p>
-    <a href="#" target="_blank" class="btn">詳細を見る</a>
+    <div class="container">
+      <h1>Pane</h1>
+      <p>
+        ドットインストールを見ながら<br>
+        コーディングができるAtomパッケージ
+      </p>
+      <a href="#" target="_blank" class="btn">詳細を見る</a>
+    </div>
   </header>
 </body>
 </html>
