--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Pane</title>
   <link rel="icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -14,7 +15,8 @@
         ドットインストールを見ながら<br>
         コーディングができるAtomパッケージ
       </p>
-      <a href="#" target="_blank" class="btn">詳細を見る</a>
+      <a href="#" target="_blank" class="btn">詳細を見る <i class="fas fa-external-link-alt"></i></a>
+      <img src="img/top.png" width="480" height="270" alt="paneの画像">
     </div>
   </header>
 </body>
