--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
+  <header class="orange-bg">
     <div class="container">
       <h1>Pane</h1>
       <p>
@@ -19,5 +19,11 @@
       <img src="img/top.png" width="480" height="270" alt="paneの画像">
     </div>
   </header>
+
+  <section class="features">
+    <div class="container">
+      <h1 data-subtitle="- Features -" class="section-title">Paneの特徴</h1>
+    </div>
+  </section>
 </body>
 </html>
