--- a/index.html
+++ b/index.html
@@ -63,8 +63,14 @@
               <h1>利用者C</h1>
               <p>良い感じです。良い感じです。良い感じです。良い感じです。良い感じです。良い感じです。良い感じです。良い感じです。良い感じです。</p>
             </section>
-
           </div>
+        </div>
+      </section>
+
+      <section class="call-to-action orange-bg">
+        <div class="container">
+          <h1 class="section-title">Paneを使ってみよう</h1>
+          <a href="#" target="_blank" class="btn">詳細を見る <i class="fas fa-external-link-alt"></i></a>
         </div>
       </section>
     </div>
