--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
           <a href="#" target="_blank" class="btn">詳細を見る <i class="fas fa-external-link-alt"></i></a>
         </div>
       </section>
+
+      <footer>
+        <p>&copy; dotinstall.com</p>
+      </footer>
     </div>
   </section>
 </body>
